--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@ All containres and some items already have a border with distinct color so you c
       Now set up container B. In practice this is the second row inside A, and its children should be distributed horizontally:
       */
     .container-B {
+      display: flex;
       flex-direction: row;
     }
 
     /* PROBLEM 3
       And container C, which is the first item of container B. What kind of direction?
       */
-    /* ENTER CODE HERE */
+    .container-C {
+      flex-direction: column;
+    }
 
     /* PROBLEM 4
       Add a 3rd item to container A by creating a new div in the HTML with the following text:
