--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@ All containres and some items already have a border with distinct color so you c
         feugiat non nibh. Integer ut ligula nibh.
       </div>
     </div>
+
+    <div class="item-A3">
+      "A3 - Phasellus ornare bibendum est, molestie tincidunt nisi cursus nec. Maecenas at tincidunt sem. In tincidunt
+      turpis non nisi accumsan, lobortis elementum ipsum hendrerit. Duis ac egestas ipsum, semper laoreet nunc. Morbi
+      aliquam ultrices enim nec ornare. Phasellus ornare bibendum est, molestie tincidunt nisi cursus nec. Maecenas at
+      tincidunt sem. In tincidunt turpis non nisi accumsan, lobortis elementum ipsum hendrerit. Duis ac egestas ipsum,
+      semper laoreet nunc. Morbi aliquam ultrices enim nec ornare."
+    </div>
   </div>
 </body>
 
